* Dialer (ECCP): getcampaignstatus: fix callstatus lowercase, use camelcase.
* Dialer (ECCP): getcampaignstatus: fix crashing bug when fetching status of a
  campaign with at least one logged-in static agent.
* Callback Extensions: fixed multiple bugs in a single function: 1) removed
  incorrect attempt to use database root user for ordinary module operation.
  2) fixed incorrect assumption that selected database user can read both the
  'call_center' and the 'asterisk' databases. 3) added missing error reporting
  so that database failures are not hidden.
* Campaign Monitoring: added new module. This module displays a campaign-centric
  view of the callcenter activity. This module displays basic information on the
  campaign, and counters of call states. Additionally there is a panel of agents
  that handle calls, with current state and the phone number that is being
  handled. Another panel shows in-progress calls that are being placed and do
  not yet have an assigned agent. A log view displays all of the call-related
  activities with timestamps. All of this information is updated in realtime
  using ECCP events.
* Agent Console: add support for new request "callprogress".
* Agent Console: add support for the three new fields in agentunlinked event.
* Dialer (ECCP): add debug tracking to msg_QueueMemberRemoved. 
* Dialer (ECCP): getcampaignstatus: callstatus is now camelcased (internal 
  representation) instead of lowercase. Fix documentation to reflect this.
* Dialer (ECCP): agentunlinked event was modified with three new fields. Fix
  documentation to reflect this.
* Dialer (ECCP): add and document new request 'campaignlog'. This request allows
  to retrieve the event log for a particular campaign.
* Dialer (ECCP): emit queue on callprogress event.
* Dialer (ECCP): getcampaignstatus: propagate trunk for each call. Display all
  agents, not just the ones handling a call.
* Dialer (ECCP): fix validation that prevented incoming calls from entering